# atu-compiler

./: .gitignore  .zenodo.json  ACTIVATION_MANIFEST.json  AGENTS.md  CITATION.cff  HF_UPLOAD.md  LAST_MILE_ACTIVATION.md  LICENSE  Makefile  PROJECT_STATUS.md  PR_OPENINFERENCE.md  PR_PROMPTFOO.md  PUBLICATION_STATUS.md  README.md  RELEASE_NOTES_v0.2.1.md  SCIENTIFIC_CLOSURE_STATUS.md  llms.txt  pyproject.toml
.github/workflows/: scientific-activation-observer.yml
citation_bundle/: .zenodo.json  CITATION.cff  RELEASE_NOTES_v0.2.1.md
cli/: __init__.py  main.py
core/: __init__.py  compiler.py
datasets/atu-trace-1000/: README.md  dataset_infos.json
docs/: agent-readable.md  scientific-citation-observer.md  zenodo-release-ingestion-decision.md  zenodo-retrigger.md
evals/promptfoo/: README.md  package-lock.json  promptfooconfig.yaml
examples/: sample.json
examples/crewai/: openinference_trace.json
examples/langsmith/: run_export.json
export/: __init__.py  jsonl.py
hf_dataset/atu_trace_1000/: README.md  dataset_infos.json
ingest/: __init__.py  loader.py
joss_submission/: ACTIVATION_MANIFEST.json  LAST_MILE_ACTIVATION.md  LICENSE  PUBLICATION_STATUS.md  README.md  RELEASE_NOTES_v0.2.0.md  SCIENTIFIC_CLOSURE_STATUS.md  llms.txt  pyproject.toml
joss_submission/docs/: agent-readable.md  scientific-citation-observer.md  zenodo-release-ingestion-decision.md  zenodo-retrigger.md
joss_submission/rfcs/: RFC-0001-atu-ir-v0.2.md
joss_submission/schemas/: receipt.schema.json  replay-manifest.schema.json
mapping/: langsmith.md  openinference.md  opentelemetry.md
normalize/: __init__.py  normalize.py
paper/: paper.md  references.bib
rfcs/: RFC-0001-atu-ir-v0.2.md
schemas/: atu-ir.schema.json
scripts/activation/: check_hf_canonical_identity.py  create_v0_2_1_zenodo_release.sh  observe_scientific_activation.py  zenodo_release_published_event_plan.sh  zenodo_retrigger_v0_2_0.sh
src/atu/: utils.py  (+2 more)
tests/: test_basic.py  test_compiler.py
(+42 files in other folders)
