[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "atu-compiler"
version = "0.2.0a1"
description = "ATU v0.2 trace-to-dataset compiler profile"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "ATU contributors" }]
keywords = [
  "agent-traces",
  "opentelemetry",
  "openinference",
  "langsmith",
  "datasets",
  "promptfoo",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "jsonschema>=4.22",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
atu = "atu.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
