[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "atu-compiler"
version = "0.2.1"
description = "Minimal ATU trace-to-episode JSONL tool"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Zhang Bin" }]
keywords = ["agent-traces", "jsonl", "trace-processor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
atu = "cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "ingest", "normalize", "export", "cli"]
